Make decomposed recipe more robust
Signed-off-by: TheSilkMiner <thesilkminer@outlook.com>